Remake to imperative|p5 and declarative caching